--- a/src/public/index.html
+++ b/src/public/index.html
@@ -33,6 +33,7 @@ LICENSE file in the root directory of this source tree.
     <h1>Messenger Demo</h1>
 
     <div>
+      <div>Under test application</div>
       <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
 
       <div class="fb-send-to-messenger" 
